make sure any failure in the pipeline fails the entire script

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -51,6 +51,7 @@ jobs:
     workingDirectory: roadtx
 
   - script: |
+      set -e
       roadrecon -h
       roadrecon-gui -h
       roadrecon plugin bloodhound -h
@@ -66,6 +67,7 @@ jobs:
       rtpass: $(rtpass)
 
   - script: |
+      set -e
       roadtx -h
       roadtx gettokens -u $rtuser -p $rtpass
       roadtx gettokens -u $rtuser -p $rtpass -c azcli -r azrm
@@ -77,6 +79,7 @@ jobs:
       rtpass: $(rtpass)
 
   - script: |
+      set -e
       roadtx gettokens -u $rtuser -p $rtpass -r drs
       roadtx device -a join -c pipeline.pem -k pipeline.key
       roadtx prt -a request -c pipeline.pem -k pipeline.key -u $rtuser -p $rtpass >/dev/null
