update build pipeline and roadtx to use custom selenium-wire fork

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,6 +21,8 @@ jobs:
         python.version: '3.11'
       Python312:
         python.version: '3.12'
+      Python313:
+        python.version: '3.13'
   steps:
   - task: UsePythonVersion@0
     inputs:
